fix(map): remove hash plugin

--- a/_includes/map.html
+++ b/_includes/map.html
@@ -28,6 +28,6 @@ map.on('drag', function() {
     map.panInsideBounds([[32, 123], [44, 132.5]], {animate: false});
 });
 
-var hash = L.hash(map)
+// var hash = L.hash(map)
 }
 </script>
